--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Welcome to Rock Paper Scissors game!</h1>
     <script src="./script.js"></script>
 </body>
 </html>
