feat!: Add UI to the game
Shifts from console and alerts to using the UI to play the game.
User places choices by use of buttons.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Welcome to Rock Paper Scissors game!</h1>
+    <div class="main">
+        <h1>Welcome to Rock Paper Scissors game!</h1>
+        <h2>Choose an option below</h2>
+        <div class="btns-container">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+        <div class="results"></div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
