feat: Add feature to start new game
Add new game button that is shown once a user completes a game

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
         </div>
-        <div class="results"></div>
+        <div id="results"></div>
+        <div id="new-game"></div>
     </div>
     <script src="./script.js"></script>
 </body>
